# Personal-AI-Assistant

./: .claudeignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DOCKERS_READY.md  DOCKER_SETUP_CN.md  FINAL_WINDOWS_GUIDE.md  GITHUB_ACTION_FIX.md  IMPROVEMENT_SUGGESTIONS.md  MACOS_BUILD_FIX.md  PODCAST_TESTING_GUIDE.md  PODCAST_TRANSCRIPTION_TEST_REPORT.md  PODCAST_USAGE.md  README-COLLABORATION.md  README.md  SECURITY_FIXES.md  START_APP.py  TEST_INSTRUCTIONS.md  TEST_REPORT.md  TEST_REPORT_XIMALAYA_PLATFORM_SUPPORT.md  WINDOWS_INSTRUCTIONS.md  WINDOWS_SOLUTION.md  ci.yml  cliff.toml  create_test_data.py  docker-compose.yml  frontend_podcast_functional_test_report.md  launch_windows.py  podcast_subscription_test_report.md  run_windows.bat  run_windows_flutter.bat  tasks20251221.md  test_manual_forgot_password.md  test_podcast_audio.sh  test_podcast_data.sh  test_podcast_fix.py  (+1 more)
backend/: .env.example  .env.production.template  .gitignore  Dockerfile  Dockerfile.cn  LOGIN_API_FIX.md  README-ENV.md  README.md  XIMALAYA_IMPLEMENTATION.md  alembic.ini  check_subscriptions.py  check_tasks.py  check_users.py  conftest.py  create_mock_data.py  database_migration.py  delete_preset_models.py  docker-entrypoint.sh  list_podcast_routes.py  list_routes.py  migrate_password_resets.py  pyproject.toml  quick_test_podcast.py  reproduce_error.py  requirements.txt  run_all_tests.py  run_podcast_tests.py  test_alembic_env.py  test_alembic_env_import.py  test_alembic_fix.py  test_auth.bat  test_auth_curl.sh  test_bulk_delete_route.py  test_circular_import_fix.py  test_logic_standalone.py  test_login_fix.py  test_platform_detection.py  test_routes.py  test_sqlalchemy.py  test_transcription_manual.py  (+2 more)
backend/alembic/: README  env.py
backend/app/: __init__.py  celery_app.py  main.py
backend/docs/: AUTHENTICATION.md  DEVELOPER_QUICKSTART.md  dependency_management_refactoring_report.md  exception-handling.md
backend/scripts/: check_openapi_diff.py  rebuild_daily_reports.py  update_requirements.ps1  update_requirements.sh
(+1436 files in other folders)
